# simplecv

./: .gitignore  README.md  pyproject.toml
simplecv/: camera_parameters.py
simplecv/data/: easymocap.py
simplecv/ops/: triangulate.py
tools/: example_triangulate.py  main.py
