[project]
name = "simplecv"
version = "0.1.0"
description = "CV Utilities for Python"
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
simplecv = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.10"
jaxtyping = ">=0.2.33,<0.3"
beartype = ">=0.18.5,<0.19"
numpy = "<2.0"
einops = ">=0.8.0,<0.9"
icecream = ">=2.1.3,<3"
rerun-sdk = ">=0.17.0,<0.18"
py-opencv = ">=4.10.0,<5"
pyserde = ">=0.20.0,<0.21"

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
